# minsky

./: CMakeLists.txt  dependencies.cmake
GUI/: CMakeLists.txt
engine/: CMakeLists.txt
gui-wt/: CMakeLists.txt  canvasPainter.cc
schema/: CMakeLists.txt
